--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,25 @@
     padding: 0px;
     border: 0px;
 }
-#grid-container{
+#main-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 20px;
+}
+#prompt-container{
 
 }
+#prompt-boundary{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 4px;
+}
+#grid-container{
+    display: flex;
+    justify-content: center;
+}
+
 #grid-boundary{
     border: 3px solid black;
 }
