--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,15 @@
     padding: 0px;
     border: 0px;
 }
+body{
+    background-color: #161c23;
+    color:#efbbbb;
+}
 #main-container{
     display: flex;
     flex-direction: column;
     gap: 20px;
-}
-#prompt-container{
-
+    justify-content: center;
 }
 #prompt-boundary{
     display: flex;
@@ -32,7 +34,24 @@
 }
 .btn{
     height: 24px;
+    padding: 0px 8px;
+    font-size: 16px;
 }
 .square{
     background-color: white;
+}
+
+header{
+    text-align: center;
+    padding: 12px 0px;
+}
+footer{
+    text-align: center;
+}
+#outer-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    min-height: 100vh;
 }
